# Bola00

./: .gitignore  readme.txt
project_0/: TODO_APP.sql
project_0/OpenCV_practise/: Start01.cpp
week-01/day-3/09 Bmi/: CMakeLists.txt  main.cpp
week-01/day-3/12 Cuboid/: main.cpp
week-01/day-3/16 AnimalsAndLengs/: CMakeLists.txt  main.cpp
week-01/day-3/17 AverageOfInput/: CMakeLists.txt  main.cpp
week-01/day-3/20 PrintBigger/: CMakeLists.txt  main.cpp
week-01/day-3/21 PartyIndicator/: CMakeLists.txt  main.cpp
week-01/day-3/22 ConditionalVariableMutation/: CMakeLists.txt  main.cpp  readme.txt
week-01/day-3/23 IWontCheatOnTheExams/: CMakeLists.txt  main.cpp
week-01/day-3/24 PrintEven/: CMakeLists.txt  main.cpp
week-01/day-3/25 MultiplicationTable/: main.cpp
week-01/day-3/26 CountFromTo/: main.cpp
week-01/day-3/27 FizzBuzz/: main.cpp
week-01/day-3/28 DrawTriangle/: main.cpp
week-01/day-3/29 DrawPyramid/: main.cpp
week-01/day-3/30 DrawDiamond/: CMakeLists.txt  main.cpp
week-01/day-3/31 DrawSquare/: main.cpp
week-01/day-3/32 DrawDiagonal/: main.cpp
week-01/day-3/33 GuessTheNumber/: main.cpp
week-01/day-3/34 ParametricAverage/: CMakeLists.txt  main.cpp
week-01/day-3/35 DrawChessTable/: main.cpp
week-01/day-3/exercise round1/: CMakeLists.txt  main.cpp  readme.txt
week-01/day-3/exercise round2/: CMakeLists.txt  main.cpp  readme.txt
week-01/day-4/21 Anagram/: CMakeLists.txt  main.cpp
week-05/Aircraft Carrier/: CMakeLists.txt  Carrier.cpp  Carrier.h  F16.cpp  F16.h  F35.cpp  F35.h  aircraft.cpp  aircraft.h  main.cpp
(+388 files in other folders)
