cmake_minimum_required(VERSION 3.13)
project(21_Anagram)

set(CMAKE_CXX_STANDARD 14)

add_executable(21_Anagram
        .idea/.name
        ".idea/21 Anagram.iml"
        .idea/encodings.xml
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        cmake-build-debug/21_Anagram.cbp
        cmake-build-debug/21_Anagram.exe
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        CMakeLists.txt
        main.cpp)
